add bagOfWords
