# api/swagger_api.yaml
@@ -3,115 +3,47 @@ openapi: 3.0.0
 info:
   description: Открытое API для работы с сервисом прогнозирования спроса
   version: 1.0.0
-  title: Demand Analysis
+  title: Determination of Tonality
 servers:
 - url: 'http://ml.determination-of-tonality.local:5000/api/v1'
 tags:
-- name: salesData
+- name: PredictTonality
   description: Информация о продажах за определенный период
 paths:
-  /hold_winter/prediction:
+  /bagOfWord_method/bagOfWords:
     post:
       tags:
-      - salesData
-      summary: Построение модели Холтера Винта для анализа и предсказания спроса.
-      description: Модель Холтера Винта для анализа и предсказания спроса.
-      operationId: api.hold_winter.prediction
+      - PredictTonality
+      summary: Определение тональности отзывов методом Bag Of Word | "Мешок слов"
+      description: Предсказание тональности отзывов на обученной модели.
+      operationId: api.bagOfWord_method.bagOfWords
       parameters:
-      - name: freq
+      - name: nameDataSet
         in: query
-        description: Частота прогнозирования (дни, недели, месяцы)
-        required: false
+        description: Название Дата-сета на котором обучалась модель
         schema:
           type: string
-      - name: column
+      - name: nameClassificator
         in: query
-        description: Столбец в файле для анализа
-        required: false
+        description: Название классификатора с помощью которого обучалась модель
         schema:
           type: string
-      - name: delimiter
-        in: query
-        description: Разделитель столбцов
-        required: false
-        schema:
-          type: string
-      - name: period
-        in: query
-        description: Период прогнозирования
-        required: false
-        schema:
-          type: number
-          format: int32
       requestBody:
         content:
-          multipart/form-data:
+          application/json:
             schema:
-              $ref: '#/components/schemas/file'
+              type: array
+              items:
+                $ref: '#/components/schemas/reviews'
       responses:
         '200':
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/forecast'
-        '400':
-          description: unsuccessful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/inline_response_400'
-  /arima/prediction:
-    post:
-      tags:
-        - salesData
-      summary: Построение модели ARIMA для анализа и предсказания спроса.
-      description: Модель ARIMA для анализа и предсказания спроса.
-      operationId: api.arima.prediction
-      parameters:
-        - name: freq
-          in: query
-          description: Частота прогнозирования (дни, недели, месяцы)
-          required: false
-          schema:
-            type: string
-        - name: column
-          in: query
-          description: Столбец в файле для анализа
-          required: false
-          schema:
-            type: string
-        - name: delimiter
-          in: query
-          description: Разделитель столбцов
-          required: false
-          schema:
-            type: string
-        - name: seasonal
-          in: query
-          description: Периодичность данных (4 - квартальные периоды, 12 - годовые периоды)
-          schema:
-            type: number
-            format: int32
-        - name: period
-          in: query
-          description: Период прогнозирования
-          required: false
-          schema:
-            type: number
-            format: int32
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              $ref: '#/components/schemas/file'
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/forecast'
+                type: array
+                items:
+                  $ref: '#/components/schemas/reviews'
         '400':
           description: unsuccessful operation
           content:
@@ -120,25 +52,39 @@ paths:
                 $ref: '#/components/schemas/inline_response_400'
 components:
   schemas:
-    file:
-      required:
-      - file
+    reviews:
       type: object
       properties:
-        file:
+        author:
           type: string
-          description: Файл с информацией о продажах
-          format: binary
-    forecast:
-      type: object
-      properties:
-        error:
+          nullable: true
+        pluses:
+          type: string
+          nullable: true
+        minuses:
+          type: string
+          nullable: true
+        description:
+          type: string
+          nullable: true
+        rating:
           type: number
+          nullable: true
           format: float
-        prediction:
-          type: object
+        date:
+          type: string
+          nullable: true
+        review:
+          type: string
+          nullable: true
+        sentiment:
+          type: integer
+          nullable: true
     inline_response_400:
       properties:
         message:
           type: string
-
+    success_response_200:
+      properties:
+        message:
+          type: string
